--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.3.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2"
   }
